# ToxFlow

./: .gitignore  GETTING_STARTED.md  LICENSE  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfigPanel.tsx  MonteCarloChart.tsx  PnlChart.tsx  SignalHeatmap.tsx  StatsCards.tsx  TradeTable.tsx  VPINChart.tsx
frontend/src/lib/: api.ts  types.ts
toxflow/: __init__.py
toxflow/api/: server.py
toxflow/backtesting/: engine.py
toxflow/core/: signal_compositor.py  types.py  vpin.py  wallet_tracker.py
toxflow/data/: polymarket_client.py  synthesis_client.py
toxflow/scripts/: run_backtest.py  run_live.py
toxflow/strategies/: toxicity_momentum.py
toxflow/tests/: test_vpin.py
