[project]
name = "toxflow"
version = "0.1.0"
description = "Polymarket orderflow toxicity engine using VPIN + Synthesis AI forecasts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.24.0",
    "httpx>=0.25.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=13.0",
]

[project.scripts]
toxflow-backtest = "toxflow.scripts.run_backtest:main"
toxflow-live = "toxflow.scripts.run_live:main"
toxflow-api = "toxflow.api.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["toxflow"]
